SNC-5969.Fix small issues in several dialogs

--- a/src/MEGASync/gui/ui/ImportMegaLinksDialog.ui
+++ b/src/MEGASync/gui/ui/ImportMegaLinksDialog.ui
@@ -89,6 +89,9 @@ color: #F3F4F4; /*colorToken.text-primary*/
        <height>36</height>
       </size>
      </property>
+     <property name="focusPolicy">
+      <enum>Qt::NoFocus</enum>
+     </property>
     </widget>
    </item>
    <item>
