Add icon for Scanning widget Transparent header when scanning

--- a/src/MEGASync/gui/ui/InfoDialog.ui
+++ b/src/MEGASync/gui/ui/InfoDialog.ui
@@ -35,9 +35,13 @@ padding-left: 0px;
  border-radius: 10px;
  padding: 10px;
 }
-#wHeader
+#wHeader[transparent_header=false]
 {
 background-color: #fffafafa; /*colorToken.surface-1*/
+}
+#wHeader[transparent_header=true]
+{
+background-color:transparent;
 }
 #wContainerTabOptions, #wContainerTabOptions *
 {
@@ -1444,7 +1448,7 @@ background-color: transparent;
                              <string>Upload to MEGA now</string>
                             </property>
                             <property name="icon">
-                             <iconset resource="../Resources_light.qrc">
+                             <iconset resource="../Resources_common.qrc">
                               <normaloff>:/upload-to-mega.png</normaloff>:/upload-to-mega.png</iconset>
                             </property>
                             <property name="iconSize">
