--- a/src/MEGASync/gui/ui/PSAwidget.ui
+++ b/src/MEGASync/gui/ui/PSAwidget.ui
@@ -343,9 +343,12 @@ color: #fffafafa; /*colorToken.text-secondary*/
                   <property name="orientation">
                    <enum>Qt::Horizontal</enum>
                   </property>
+                  <property name="sizeType">
+                   <enum>QSizePolicy::MinimumExpanding</enum>
+                  </property>
                   <property name="sizeHint" stdset="0">
                    <size>
-                    <width>40</width>
+                    <width>0</width>
                     <height>0</height>
                    </size>
                   </property>
