Fixed problem with cut-off buttons on Transfer Manager

--- a/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
+++ b/src/MEGASync/gui/style/WidgetsComponentsStyleSheetsSizes.css
@@ -306,6 +306,11 @@ padding-right: 24px;
 qproperty-iconSize:24px;
 }
 
+QAbstractButton[short=false]
+{
+min-width: -1px;
+}
+
 /*
     class = icon-button
     We need to override and reset some common properties for buttons
