--- a/src/MEGASync/gui/ui/PSAwidget.ui
+++ b/src/MEGASync/gui/ui/PSAwidget.ui
@@ -289,7 +289,13 @@ color: #fffafafa; /*colorToken.text-secondary*/
                  <number>0</number>
                 </property>
                 <item>
-                 <widget class="QPushButton" name="bMore">
+                 <widget class="TokenizableButton" name="bMore">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -314,7 +320,13 @@ color: #fffafafa; /*colorToken.text-secondary*/
                  </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="bDismiss">
+                 <widget class="TokenizableButton" name="bDismiss">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -380,6 +392,11 @@ color: #fffafafa; /*colorToken.text-secondary*/
    <extends>QFrame</extends>
    <header location="global">ElidedLabel.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TokenizableButton</class>
+   <extends>QPushButton</extends>
+   <header>tokenizer/TokenizableItems/TokenizableButtons.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
