--- a/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelectorTreeViewWidget.ui
@@ -563,7 +563,7 @@ color: #616366; /*colorToken.text-secondary*/
              <number>0</number>
             </property>
             <item>
-             <widget class="TokenizableToolButton" name="bNewFolder">
+             <widget class="TokenizableButton" name="bNewFolder">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -585,9 +585,6 @@ color: #616366; /*colorToken.text-secondary*/
                 <width>16</width>
                 <height>16</height>
                </size>
-              </property>
-              <property name="toolButtonStyle">
-               <enum>Qt::ToolButtonTextBesideIcon</enum>
               </property>
               <property name="type" stdset="0">
                <string notr="true">ghost</string>
@@ -1129,6 +1126,11 @@ color: #616366; /*colorToken.text-secondary*/
    <extends>QWidget</extends>
    <header>TabSelector.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TokenizableButton</class>
+   <extends>QPushButton</extends>
+   <header>tokenizer/TokenizableItems/TokenizableButtons.h</header>
   </customwidget>
   <customwidget>
    <class>NodeSelectorTreeView</class>
